<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:background="@drawable/background_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<androidx.appcompat.widget.AppCompatImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/person_image"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:background="@drawable/background_grey"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:scaleType="center"
        android:layout_marginStart="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/photo"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"

        >
    </com.google.android.material.imageview.ShapeableImageView>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="cursive"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/person_image"
        app:layout_constraintVertical_bias="0.20"
        />
    <TextView
        android:id="@+id/first_and_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxWidth="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/person_name"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/person_image"
        app:layout_constraintVertical_bias="0.65"
        />
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/phone"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.20"
        />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/person_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="cursive"
        android:textSize="16sp"
        android:maxWidth="100dp"
        android:lines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.20"
        />
</androidx.constraintlayout.widget.ConstraintLayout>