<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.BlankFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/person_image"
        android:layout_width="146dp"
        android:layout_height="200dp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:scaleType="center"
        android:background="@drawable/background_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/photo"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
        >
    </com.google.android.material.imageview.ShapeableImageView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/shadow_back"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:background="@drawable/gradient_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/person_image">
        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxWidth="180dp"
            android:paddingTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="6dp"
            android:textSize="16sp"
            android:layout_marginTop="26dp"
            android:fontFamily="sans-serif-black"
            android:lines="2"
            android:textColor="#000000"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_phone"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:contentDescription="@string/phone"
            android:background="@drawable/background_grey"
            android:textSize="14sp"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF"
            />
        <TextView
            android:id="@+id/person_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxWidth="150dp"
            android:paddingTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="6dp"
            android:textSize="14sp"
            android:fontFamily="cursive"
            android:textColor="#000000"

            />
        <TextView
            android:id="@+id/person_day_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="6dp"
            android:maxWidth="100dp"
            android:textColor="#000000"
            android:fontFamily="cursive"
            />
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/gender"
            android:paddingTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="6dp"
            android:maxWidth="100dp"
            android:textColor="#000000"
            android:fontFamily="cursive"
            />
    </LinearLayout>
 <androidx.appcompat.widget.LinearLayoutCompat
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintTop_toBottomOf="@+id/shadow_back"
     app:layout_constraintStart_toStartOf="parent"
     >
     <TextView
         android:id="@+id/address_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
         android:text="@string/address"
         android:paddingTop="6dp"
         android:paddingStart="16dp"
         android:paddingEnd="6dp"
         android:textSize="16sp"
         android:layout_marginTop="26dp"
         android:fontFamily="sans-serif-black"
         android:textColor="#000000"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_address"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/address"
         android:fontFamily="sans-serif-black"
         android:textColor="#000000"
         />
     <TextView
         android:id="@+id/email_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
         android:text="@string/email"
         android:paddingTop="6dp"
         android:paddingStart="16dp"
         android:paddingEnd="6dp"
         android:textSize="16sp"
         android:layout_marginTop="26dp"
         android:fontFamily="sans-serif-black"
         android:textColor="#000000"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_email"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/email"
         android:fontFamily="sans-serif-black"
         android:textColor="#000000"
         />
 </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>